--- a/biljeznica.ipynb
+++ b/biljeznica.ipynb
@@ -24,9 +24,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.image.AxesImage at 0x7f868a2a2668>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "figa, axa = plt.subplots()\n",
@@ -65,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,14 +84,14 @@
     "\n",
     "class Block:\n",
     "\n",
-    "    def __init__(self, index, timpestamp, previousHash, data):\n",
+    "    def __init__(self, index, timpestamp, previousHash, transactions):\n",
     "        \n",
     "        self.index = index\n",
     "        self.timestamp = timpestamp\n",
-    "        self.data = data\n",
+    "        self.transactions = transactions\n",
     "        self.previousHash = previousHash\n",
     "        self.encoded = (str(self.index) + str(self.timestamp) + \n",
-    "                str(self.data) + str(self.previousHash)).encode('utf-8')\n",
+    "                str(self.transactions) + str(self.previousHash)).encode('utf-8')\n",
     "        self.hash = self.hashMyBlock().hexdigest()\n",
     "\n",
     "    def hashMyBlock(self):\n",
@@ -91,14 +102,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import datetime as date\n",
-    "genesisBlock = Block(0, date.datetime.now(),\"\",\"First block\")\n",
+    "\n",
+    "def getMeTime():\n",
+    "    \n",
+    "    return date.datetime.now()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a00cdb33d1a6f850488f9b37178b17a9fdaa7bb71dff3a318b76a6a430eb96b6'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "genesisBlock = Block(0, getMeTime(),\"\",[\"First block\"])\n",
     "genesisBlock.hash"
    ]
   },
@@ -111,14 +145,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a00cdb33d1a6f850488f9b37178b17a9fdaa7bb71dff3a318b76a6a430eb96b6'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "copyOfGenesisBlock = Block(genesisBlock.index,genesisBlock.timestamp,\n",
+    "                           genesisBlock.previousHash,genesisBlock.transactions)\n",
+    "copyOfGenesisBlock.hash"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "copyOfGenesisBlock = Block(genesisBlock.index,genesisBlock.timestamp,\n",
-    "                           genesisBlock.previousHash,genesisBlock.data)\n",
-    "copyOfGenesisBlock.hash"
+    "class Blockchain:\n",
+    "    \n",
+    "    def __init__(self, genesisBlock):\n",
+    "        \n",
+    "        self.genesisBlock = genesisBlock\n",
+    "        self.blocks = []\n",
+    "        self.blocks.append(genesisBlock)\n",
+    "    \n",
+    "    def addNewBlock(self, block):\n",
+    "        \n",
+    "        self.blocks.append(block)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transactions = [\"Alice Bob 50\",\"Bob John 10\"]\n",
+    "\n",
+    "secondBlock = Block(1,getMeTime(),genesisBlock.hash,transactions)\n",
+    "\n",
+    "transactions3 = [\"Bob Alice 20\", \"John Mary 5\", \"Alice Mary 20\"]\n",
+    "thirdBlock = Block(2,getMeTime(),secondBlock.hash,transactions3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['First block']"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "genesisBlock.transactions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def printBlock(block):\n",
+    "    \n",
+    "    print(\"=\" * 30 + \" \" + str(block.index) + \" \" + \"=\" * 30)\n",
+    "    print(block.hash)\n",
+    "    print(\"=\" * 63)\n",
+    "    for trans in block.transactions:\n",
+    "        print(trans)\n",
+    "\n",
+    "def printBlockchain(blockchain):\n",
+    "    \n",
+    "    for block in blockchain.blocks:\n",
+    "        printBlock(block)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================== 0 ==============================\n",
+      "a00cdb33d1a6f850488f9b37178b17a9fdaa7bb71dff3a318b76a6a430eb96b6\n",
+      "===============================================================\n",
+      "First block\n"
+     ]
+    }
+   ],
+   "source": [
+    "printBlock(genesisBlock)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================== 1 ==============================\n",
+      "4cfab635f6c02b97274af250c512ebae051425197955f816417b00e3cf0d76bf\n",
+      "===============================================================\n",
+      "Alice Bob 50\n",
+      "Bob John 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "printBlock(secondBlock)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================== 0 ==============================\n",
+      "a00cdb33d1a6f850488f9b37178b17a9fdaa7bb71dff3a318b76a6a430eb96b6\n",
+      "===============================================================\n",
+      "First block\n",
+      "============================== 1 ==============================\n",
+      "4cfab635f6c02b97274af250c512ebae051425197955f816417b00e3cf0d76bf\n",
+      "===============================================================\n",
+      "Alice Bob 50\n",
+      "Bob John 10\n",
+      "============================== 2 ==============================\n",
+      "f64194505b2fb4216b5fbc548a97438b208c98968826d5e48665107140caea84\n",
+      "===============================================================\n",
+      "Bob Alice 20\n",
+      "John Mary 5\n",
+      "Alice Mary 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "blockchain = Blockchain(genesisBlock)\n",
+    "blockchain.addNewBlock(secondBlock)\n",
+    "blockchain.addNewBlock(thirdBlock)\n",
+    "printBlockchain(blockchain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
